# raiden-synapse-modules

./: .flake8  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
raiden_synapse_modules/: eth_auth_provider.py  federation_whitelist_reloader.py  pfs_presence_router.py  service_address_listener.py  stub.py
raiden_synapse_modules/presence_router/: blockchain_support.py  pfs.py
tests/: conftest.py  test_blockchain.py  test_ci.py  test_pfs_prensence_router.py
